--- a/index.css
+++ b/index.css
@@ -128,6 +128,10 @@ ul {
     margin-right: 8px;
 }
 
+.variant__mark {
+    color: dodgerblue;
+}
+
 @media (min-width: 576px) {
     #search::placeholder {
         font-size: 12px;
